--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST API endpoint that provides auto-complete suggestions for large cities.",
   "main": "server.js",
   "scripts": {
-    "start": "babel-node -- server.js",
+    "start:server": "babel-node -- server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "heroku": "^7.29.0",
     "line-reader": "^0.4.0",
     "nodemon": "^1.19.2"
   },
