--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "express": "^4.17.1",
     "heroku": "^7.29.0",
     "line-reader": "^0.4.0",
-    "nodemon": "^1.19.2"
-  },
-  "devDependencies": {
+    "nodemon": "^1.19.2",
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.6.0"
+  },
+  "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
