--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:server": "babel-node -- server.js",
     "start:dev": "nodemon --exec babel-node -- server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:test": "mocha --require @babel/polyfill --require @babel/register tests/*.js --timeout 10000 --exit"
   },
   "repository": {
     "type": "git",
@@ -15,17 +15,21 @@
   "author": "T. William",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "heroku": "^7.29.0",
-    "line-reader": "^0.4.0",
-    "nodemon": "^1.19.2",
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0"
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "express": "^4.17.1",
+    "heroku": "^7.29.0",
+    "line-reader": "^0.4.0",
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.2"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
