--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN  
+  github_token: vr1KxIMA4HGObMGwTVeaYw  
   keep_history: true
   on:
     branch: develop
