--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-after_success: 
-  - "npm run coverage"
 language: node_js
 node_js:
   - "stable"
+install: npm install
 cache:
   directories:
   - node_modules
 script:
   - npm run start:test
+after_success: npm run coverage
